[package]
name = "starsheet"
version = "0.1.1"
authors = ["Brad Alfirevic <brad@genbyte.dev>"]
edition = "2018"
description = "Procedural pictures of psuedoskies"
readme = "README.md"
homepage = "https://github.com/genuinebyte/starsheet"
repository = "https://github.com/genuinebyte/starsheet"
license = "CC0-1.0"
keywords = ["graphics", "stars", "space"]
categories = ["graphics"]

[dependencies]
getopts = "0.2"
png = "0.16.7"
rand = "0.7.3"